--- a/app/assets/stylesheets/custom_mixins.css.scss
+++ b/app/assets/stylesheets/custom_mixins.css.scss
@@ -14,3 +14,13 @@
 @mixin clearfix {
 	clear: both;
 }
+
+@mixin calendar_button {
+	position: absolute;
+	top: 15px;
+	width: 0;
+	height: 0;
+	border-top: 6px solid transparent;
+	border-bottom: 6px solid transparent;
+	cursor: pointer;
+}
