--- a/app/views/admin/courses/_basic_form.html.erb
+++ b/app/views/admin/courses/_basic_form.html.erb
@@ -1,11 +1,13 @@
 <fieldset>
-	<legend>Basic info:</legend>
-  <%= f.label :name, "Course Name" %>
-  <%= f.text_field :name %>
+	<legend>Course Info</legend>
+	<div class="span4 offset2">
+		<%= f.label :name, "Course Name" %>
+		<%= f.text_field :name %>
 
-  <%= f.label :start_date, "Start Date" %>
-  <%= f.date_field :start_date %>
+		<%= f.label :start_date, "Start Date" %>
+		<%= f.text_field :start_date, value: l(DateTime.now), class: "date-field" %>
 
-  <%= f.label :end_date, "End Date" %>
-  <%= f.date_field :end_date %>
+		<%= f.label :end_date, "End Date" %>
+		<%= f.text_field :end_date, value: l(DateTime.now), class: "date-field" %>
+	</div>
 </fieldset>
