--- a/app/views/admin/courses/new.html.erb
+++ b/app/views/admin/courses/new.html.erb
@@ -1,23 +1,26 @@
 <% provide(:title, "Add new course") %>
 <h1>Add a new course</h1>
 
-<div class="row">
-  <div class="span6 offset3">
-    <%= form_for [:admin, @supervisor, @course] do |f| %>
-      <%= render "shared/course_error_messages" %>
-      <%= render "basic_form", f: f %>
-    	<%= render "create_form", f: f %>
-    <% end %>
-  </div>
+<div class="span9">
+  <%= form_for [:admin, @supervisor, @course] do |f| %>
+    <%= render "shared/course_error_messages" %>
+    <%= render "basic_form", f: f %>
+  	<%= render "create_form", f: f %>
+    <div class="center">
+      <%= f.submit "Create course", class: "btn btn-large btn-primary" %>
+    </div>
+  <% end %>
 </div>
 
 <script>
 	$('.subject').click(function() {
-		if($(this).is(':checked')) {  
-	  	$(this).parent().next('.subject-content').show();
+		if($(this).is(':checked')) {
+	  	$(this).closest('tr').find('td.subject-duration').find('input').show();
+	  	$(this).closest('tr').find('td.subject-tasks').find('ul').show();
 	  }
 		else {
-	  	$(this).parent().next('.subject-content').hide();
+	  	$(this).closest('tr').find('td.subject-duration').find('input').hide();
+	  	$(this).closest('tr').find('td.subject-tasks').find('ul').hide();
 	  }
-});
+	});
 </script>
