--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -13,7 +13,7 @@
       <% if user.unassigned? %>
         No course joined<br>
       <% else %>
-        <%= link_to user.current_course.name, "#" %><br>
+        <%= link_to user.current_course.name, [:admin, current_supervisor, user.current_course] %><br>
         Status:<%= user.current_enrollment.status %><br>
         Subjects:<%= user.current_enrollment.enrollment_subjects.done_subject.count %> / <%= user.current_course.subjects.count %><br>
       <% end %>
