--- a/app/views/admin/courses/_create_form.html.erb
+++ b/app/views/admin/courses/_create_form.html.erb
@@ -1,6 +1,6 @@
 <fieldset>
   <legend>Choose Subject(s)</legend>
-  <table>
+  <table class="add-course">
     <tr>
       <th>Subject</th>
       <th>Duration (days)</th>
