--- a/app/views/admin/static_pages/_user_sidebar.html.erb
+++ b/app/views/admin/static_pages/_user_sidebar.html.erb
@@ -2,7 +2,7 @@
 <ul class="user-sidebar">
 	<li class="sub-list">
 		<h3 class="list-header">
-			<%= link_to "All Supervisors", "javascript: void(0);" %>
+			<%= link_to "All Supervisors", "#", class: "non-redirect" %>
 			(<%= all_supervisors.count %>)
 			<b class="caret"></b>
 		</h3>
@@ -14,14 +14,29 @@
 			</li>
 			<% end %>
 		</ul>
-	</li> 
+	</li>
 </ul>
 <h2>Courses</h2>
 <ul class="user-sidebar">
+	<li class="sub-list closed">
+		<h3 class="list-header">
+			<%= link_to "No course", "#", class: "non-redirect" %>
+			(<%= unassigned_users.count %>)
+			<b class="caret"></b>
+		</h3>
+		<ul>
+			<% unassigned_users.each do |user| %>
+			<li>
+				<%= gravatar_for user %>
+				<%= link_to user.name, admin_user_path(user), class: "user-name" %>
+			</li>
+			<% end %>
+		</ul>
+	</li>
 	<% all_courses.each do |course| %>
 	<li class="sub-list closed">
 		<h3 class="list-header">
-			<%= link_to course.name, "javascript: void(0);" %>
+			<%= link_to course.name, "#", class: "non-redirect" %>
 			(<%= course.users.choose_user_in_course(course.id).count %>)
 			<b class="caret"></b>
 		</h3>
@@ -31,7 +46,7 @@
 				<%= gravatar_for user %>
 				<%= link_to user.name, admin_user_path(user), class: "user-name" %>
 			</li>
-			<% end %>	
+			<% end %>
 		</ul>
 	</li>
 	<% end %>
