--- a/app/views/admin/courses/index.html.erb
+++ b/app/views/admin/courses/index.html.erb
@@ -25,10 +25,10 @@
 				<td><%= l course.start_date %></td>
 				<td><%= pluralize course.duration, "day" %></td>
 				<td><%= course.subjects.count %></td>
-				<td><%= course.users.choose_user_in_course(course.id).count %></td>
+				<td><%= course.users.count %></td>
 				<td><%= course.status %></td>
 				<td>
-					<%= link_to "edit", [:edit_admin, current_supervisor, course], class: "btn btn-primary small" %>
+					<%= link_to "edit", [:edit, :admin, current_supervisor, course], class: "btn btn-primary small" %>
 					<%= link_to "delete", [:admin, current_supervisor, course], method: :delete, confirm: "Are you sure?", class: "btn btn-danger small" %>
 				</td>
 			</tr>
