--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -12,18 +12,18 @@
         <%= link_to user.name, admin_user_path(user) %>
         <%= link_to "delete", user, method: :delete, confirm: "Are you sure?", title: "Delete #{user.name}", class: "link-danger" %>
       </h3>
-      <% if user.unassigned? %>
+      <% if user.free? %>
         No course joined<br>
       <% else %>
         Course: <%= link_to user.current_course.name, [:admin, current_supervisor, user.current_course] %><br>
         Status:<%= user.current_enrollment.status %><br>
-        Subjects:<%= user.current_enrollment.enrollment_subjects.done_subject.count %> / <%= user.current_course.subjects.count %><br>
+        Subjects:<%= user.current_enrollment.enrollment_subjects.finished_subject.count %> / <%= user.current_course.subjects.count %><br>
       <% end %>
     </div>
   </li>
   <% end %>
 </ul>
-<%= will_paginate @users %>
+<%= will_paginate %>
 <script>
   $(function() {
     $('#course_select').change(function() {
