--- a/app/views/admin/courses/_create_form.html.erb
+++ b/app/views/admin/courses/_create_form.html.erb
@@ -9,8 +9,10 @@
     <%= f.fields_for :course_subjects do |builder| %>
     <tr>
       <td>
-        <%= builder.check_box :chosen, {class: "subject", checked: false}, true, false %>
+        <%= builder.check_box :active_flag, {class: "subject", checked: false}, 1, 0 %>
         <%= builder.object.subject.name if builder.object.subject_id %>
+        <%= builder.label :start_date, "Start Date" %>
+        <%= builder.text_field :start_date, value: l(DateTime.now), class: "date-field" %>
       </td>
       <td class="subject-duration">
         <%= builder.hidden_field :subject_id, value: builder.object.subject_id %>
@@ -20,7 +22,7 @@
         <ul class="tasks-sup">
           <%= builder.fields_for :course_subject_tasks do |sub_builder| %>
           <li>
-            <%= sub_builder.check_box :chosen, {checked: true}, true, false %>
+            <%= sub_builder.check_box :active_flag, {checked: true}, 1, 0 %>
             <%= sub_builder.object.task.name if sub_builder.object.task_id %>
             <%= sub_builder.hidden_field :task_id, value: sub_builder.object.task_id %>
             <%= sub_builder.hidden_field :subject_id, value: builder.object.subject_id %>
