--- a/app/views/admin/courses/_edit_form.html.erb
+++ b/app/views/admin/courses/_edit_form.html.erb
@@ -9,8 +9,14 @@
     <%= f.fields_for :course_subjects, @course.full_course_subjects do |builder| %>
     <tr>
       <td>
-        <%= builder.check_box :chosen, {class: "subject", checked: builder.object.chosen}, true, false %>
+        <%= builder.check_box :active_flag, {class: "subject", checked: (builder.object.active_flag == Settings.flag.active)}, 1, 0 %>
         <%= builder.object.subject.name if builder.object.subject_id %>
+        <%= builder.label :start_date, "Start Date" %>
+        <% if builder.object.start_date %>
+          <%= builder.text_field :start_date, value: l(builder.object.start_date), class: "date-field" %>
+        <% else %>
+          <%= builder.text_field :start_date, value: l(f.object.start_date), class: "date-field" %>
+        <% end %>
       </td>
       <td class="subject-duration">
         <%= builder.hidden_field :subject_id, value: builder.object.subject_id %>
@@ -20,7 +26,7 @@
         <ul class="tasks-sup">
           <%= builder.fields_for :course_subject_tasks, builder.object.full_course_subject_tasks do |sub_builder| %>
           <li>
-            <%= sub_builder.check_box :chosen, {checked: sub_builder.object.chosen}, true, false %>
+            <%= sub_builder.check_box :active_flag, {checked: (sub_builder.object.active_flag == Settings.flag.active)}, 1, 0 %>
             <%= sub_builder.object.task.name if sub_builder.object.task_id %>
             <%= sub_builder.hidden_field :task_id, value: sub_builder.object.task_id %>
             <%= sub_builder.hidden_field :subject_id, value: builder.object.subject_id %>
