--- a/app/views/admin/courses/index.html.erb
+++ b/app/views/admin/courses/index.html.erb
@@ -5,7 +5,7 @@
 	<small>( <%= @courses.count %> )</small>
 </h1>
 
-<%= link_to "Add new", new_admin_supervisor_course_path, class: "btn btn-primary small right above-table" %>
+<%= link_to "Add new", [:new, :admin, current_supervisor, :course], class: "btn btn-primary small right above-table" %>
 <div class="center">
 	<table>
 		<tr>
