--- a/app/views/admin/courses/index.html.erb
+++ b/app/views/admin/courses/index.html.erb
@@ -25,7 +25,7 @@
 				<td><%= l course.start_date %></td>
 				<td><%= pluralize course.duration, "day" %></td>
 				<td><%= course.subjects.count %></td>
-				<td><%= course.users.count %></td>
+				<td><%= course.trainees.count %></td>
 				<td><%= t "status.#{course.status}" %></td>
 				<td>
 					<%= link_to "edit", [:edit, :admin, current_supervisor, course], class: "btn btn-primary small" %>
