--- a/app/views/admin/shared/_assign_trainees.html.erb
+++ b/app/views/admin/shared/_assign_trainees.html.erb
@@ -5,12 +5,13 @@
     <h3 id="assign_trainee_modal_label">Assign trainee to: <%= @course.name %></h3>
   </div>
   <div class="modal-body">
-    <%= form_tag(admin_supervisor_course_user_list_path(current_supervisor, @course), id: "user_list_form", method: :patch) %>
+    <%= form_tag(admin_supervisor_course_trainee_list_path(current_supervisor, @course),
+      id: "trainee_list_form", method: :patch) %>
       <div class="row center">
         <div class="center-child">
           <div class="span3">
             <div class="assignment-list-title">Unassigned trainees</div>
-            <%= select_tag :select_trainee_ids, options_from_collection_for_select(User.free, :id, :name), 
+            <%= select_tag :select_trainee_ids, options_from_collection_for_select(Trainee.free, :id, :name), 
               multiple: true, class: "assignment-select" %>
           </div>
           <div class="span1 center assignment-button-wrap">
