--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'All users') %>
-<h1> All Users Course <%= @course.name %></h1>
+<% provide(:title, "All Trainees") %>
+<h1> All Trainees in Course <%= @course.name %></h1>
 <ul class="users">
-	<%= render 'shared/show_user' %>
+	<%= render 'shared/show_trainee' %>
 </ul>
