--- a/app/views/shared/_activities.html.erb
+++ b/app/views/shared/_activities.html.erb
@@ -2,7 +2,7 @@
 <ul class="activities">
   <% @activities.each do |activity| %>
   <li>
-    <%= link_to activity.user.name, activity.user %>
+    <%= link_to activity.trainee.name, activity.trainee %>
     <% case activity.temp_type %>
     <% when Activity::START_COURSE %>
       Start Course 
@@ -13,12 +13,12 @@
       Finish task
       <%= activity.enrollment_task.task.name %>
         Subject
-      <%= link_to activity.enrollment_subject.subject.name, user_enrollment_enrollment_subject_path(activity.user.id, activity.enrollment_subject.enrollment_id, activity.enrollment_subject.id) %>
+      <%= link_to activity.enrollment_subject.subject.name, trainee_enrollment_enrollment_subject_path(activity.trainee.id, activity.enrollment_subject.enrollment_id, activity.enrollment_subject.id) %>
       Course
       <%= link_to  activity.course.name, activity.course %>
     <% when Activity::FINISH_SUBJECT %>
       Finish Subject
-       <%= link_to activity.enrollment_subject.subject.name, user_enrollment_enrollment_subject_path(activity.user.id, activity.enrollment_subject.enrollment_id, activity.enrollment_subject.id) %>
+       <%= link_to activity.enrollment_subject.subject.name, trainee_enrollment_enrollment_subject_path(activity.trainee.id, activity.enrollment_subject.enrollment_id, activity.enrollment_subject.id) %>
       Course
       <%= link_to  activity.course.name, activity.course %>
     <% when Activity::FINISH_COURSE %>
