--- a/app/views/shared/_show_user_sidebar.html.erb
+++ b/app/views/shared/_show_user_sidebar.html.erb
@@ -1,12 +1,12 @@
 <ul class="user-sidebar content">
-	<% users.each do |user| %>
-	<li>
-		<%= gravatar_for user %>
-		<% if type == "user" %>
-		<%= link_to user.name, admin_user_path(user), class: "user-name" %>
-		<% else %>
-		<%= link_to user.name, admin_supervisor_path(user), class: "user-name" %>
-		<% end %>
-	</li>
-	<% end %>
+  <% users.each do |user| %>
+  <li>
+    <%= gravatar_for user %>
+    <% if type == "trainee" %>
+      <%= link_to user.name, admin_trainee_path(user), class: "user-name" %>
+    <% else %>
+      <%= link_to user.name, admin_supervisor_path(user), class: "user-name" %>
+    <% end %>
+  </li>
+  <% end %>
 </ul>
