reflect finish subject

--- a/app/views/admin/courses/show.html.erb
+++ b/app/views/admin/courses/show.html.erb
@@ -21,7 +21,7 @@
       <p>
           <%= "#{l course_subject.start_date} - #{l course_subject.finish_date}" %>
         <%= t "status.#{course_subject.status}" %>
-        <% if @course.started? && course_subject.unfinish? %>
+        <% if @course.started? && course_subject.unfinished? %>
           <%= link_to "Finish", admin_supervisor_course_course_subject_path(current_supervisor.id,
             @course.id, course_subject.id), method: :patch, class: "btn btn-large btn-primary" %>
         <% end %>
