--- a/app/views/admin/courses/_start_finish_button.html.erb
+++ b/app/views/admin/courses/_start_finish_button.html.erb
@@ -1,8 +1,8 @@
 <% if @course.has_trainee? %>
-	<% if @course.started? %>
-		<%= link_to "Finish Course", "#", class: "btn btn-large btn-primary" %>
-	<% else %>
-		<%= link_to "Start Course", [:admin, current_supervisor, @course], method: :patch,
-		  confirm: "Start this course?", class: "btn btn-large btn-primary" %>
-	<% end %>
+  <% if @course.started? %>
+    <%= link_to "Finish Course", "#", class: "btn btn-large btn-primary" %>
+  <% else %>
+    <%= link_to "Start Course", admin_supervisor_course_path(current_supervisor, @course,
+      start: "start"), method: :patch, confirm: "Start this course?", class: "btn btn-large btn-primary" %>
+  <% end %>
 <% end %>
