--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Your course: <%= current_course.name %></h1>
+<h1>Your course: <%= @course.name %></h1>
 <h2>Course Progress</h2>
 <ul class="milestones">
   <% @enrollment_subjects.each do |enrollment_subject| %>
