--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -983,3 +983,28 @@ table.add-course {
 fieldset legend {
   font-family: $font_title;
 }
+
+/* Admin new subject */
+#admin-subject {
+  label {
+    margin-top: 10px;
+  }
+
+  ul#sortable {
+    border: 1px solid #5489C4;
+    list-style: none;
+    margin: 0 0 20px;
+    padding: 10px;
+    min-height: 8px;
+  }
+
+  li {
+    background: #CCCCCC;
+    margin: 5px 0;
+    padding: 5px;
+  }
+  
+  div.center {
+    margin-top: 30px;
+  }
+}
