--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,6 +23,7 @@
           <li><%= link_to "Home", admin_root_path %></li>
           <li><%= link_to "Trainees", admin_trainees_path %></li>
           <li><%= link_to "Courses", admin_supervisor_courses_path(current_supervisor.id) %></li>
+          <li><%= link_to "Subjects", admin_subjects_path %></li>
           <li id="" class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Welcome, <i> <%= current_supervisor.name %> </i> <b class="caret"></b>
